--- a/loginSuccess.html
+++ b/loginSuccess.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Account Page</title>
-    <link href="./common.css" rel="stylesheet">
-    <script src="./checkLogin.js"></script>
+    <link href="./css/common.css" rel="stylesheet">
+    <script src="./js/checkLogin.js"></script>
 </head>
 
 <body>
