--- a/manageDocs.html
+++ b/manageDocs.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Users</title>
-  <link href="./common.css" rel="stylesheet">
-  <script src="./checkLogin.js"></script>
+  <link href="./css/common.css" rel="stylesheet">
+  <script src="./js/checkLogin.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
