--- a/userManagement.html
+++ b/userManagement.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Users</title>
-  <link href="./common.css" rel="stylesheet">
-  <script src="./checkLogin.js"></script>
+  <link href="./css/common.css" rel="stylesheet">
+  <script src="./js/checkLogin.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -78,7 +78,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <img src="./Help.png" alt="question" /> Are you sure?
+            <img src="./images/Help.png" alt="question" /> Are you sure?
           </div>
           <div class="modal-footer">
             <button type="submit" id="submitbtn" class="btn btn-outline-primary">Ok</button>
